--- a/COAD Analysis.ipynb
+++ b/COAD Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "quality-number",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7db04b51",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "american-massage",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "[5 rows x 21083 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "angry-license",
    "metadata": {},
    "outputs": [
@@ -695,7 +695,7 @@
        "[10 rows x 29 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f5ce6fc1",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
        "[5 rows x 267 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "c69e4495",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1185,7 @@
        "[5 rows x 187 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e5ac1a2e",
    "metadata": {},
    "outputs": [],
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "temporal-january",
    "metadata": {},
    "outputs": [],
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "visible-sunglasses",
    "metadata": {},
    "outputs": [],
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "exposed-department",
    "metadata": {},
    "outputs": [],
@@ -1319,17 +1319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "superior-brick",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f96fc2d8eb0>"
+       "<matplotlib.legend.Legend at 0x7f84188e3fd0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1379,17 +1379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "incorrect-enforcement",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f96fd24f3a0>"
+       "<matplotlib.legend.Legend at 0x7f841cc9fc70>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1438,17 +1438,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "a7618515",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f97fd0eee20>"
+       "<matplotlib.legend.Legend at 0x7f851429f9d0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "informational-style",
    "metadata": {},
    "outputs": [
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "883a82b3",
    "metadata": {},
    "outputs": [],
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "89f05c8d",
    "metadata": {},
    "outputs": [
@@ -1578,7 +1578,7 @@
        "(55, 2)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "id": "04af248f",
    "metadata": {},
    "outputs": [
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "a07922b4",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "d72a82c6",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "aeab54f2",
    "metadata": {},
    "outputs": [
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "d90b5fb1",
    "metadata": {},
    "outputs": [
@@ -1820,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "id": "9ae9f282",
    "metadata": {},
    "outputs": [],
@@ -1845,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "id": "b637581c",
    "metadata": {},
    "outputs": [
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "id": "aac37eaf",
    "metadata": {},
    "outputs": [
@@ -1918,7 +1918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "id": "d921e4b8",
    "metadata": {},
    "outputs": [
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "id": "aba5c0c5",
    "metadata": {},
    "outputs": [],
@@ -1999,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "id": "7edea73a",
    "metadata": {},
    "outputs": [
@@ -2036,7 +2036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "id": "37f9c065",
    "metadata": {},
    "outputs": [
@@ -2072,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "id": "121b28b3",
    "metadata": {},
    "outputs": [
@@ -2128,7 +2128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "345a0ab7",
    "metadata": {},
    "outputs": [],
@@ -2136,29 +2136,29 @@
     "# Stats for std plotting\n",
     "# Calculate Stats of Training\n",
     "# Gene sig\n",
-    "tprs_gene_sig = np.array(tprs_gene_sig)\n",
-    "mean_tprs_gs = tprs_gene_sig.mean(axis=0)\n",
-    "std_gs = tprs_gene_sig.std(axis=0)\n",
+    "tprs_gs_svm = np.array(tpr_train_gs_svm)\n",
+    "mean_tprs_gs_svm = tprs_gs_svm.mean(axis=0)\n",
+    "std_gs_svm = tprs_gs_svm.std(axis=0)\n",
     "\n",
     "# deseq\n",
-    "tprs_deseq = np.array(tprs_deseq)\n",
-    "mean_deseq = tprs_deseq.mean(axis=0)\n",
-    "std_deseq = tprs_deseq.std(axis=0)\n",
+    "tprs_seq_scm = np.array(tpr_train_seq_svm)\n",
+    "mean_seq_svm = tprs_seq_scm.mean(axis=0)\n",
+    "std_seq_svm = tprs_seq_scm.std(axis=0)\n",
     "\n",
     "# random\n",
-    "tprs_rand = np.array(tprs_rand)\n",
-    "mean_rand = tprs_rand.mean(axis=0)\n",
-    "std_rand = tprs_rand.std(axis=0)\n",
+    "tprs_rand_svm = np.array(tpr_train_rand_svm)\n",
+    "mean_rand_svm = tprs_rand_svm.mean(axis=0)\n",
+    "std_rand_svm = tprs_rand_svm.std(axis=0)\n",
     "\n",
     "# Create First and last point (0,0;1,1) - each dataset\n",
-    "tprs_upper_gs = np.minimum(mean_deseq + std_gs, 1)\n",
-    "tprs_lower_gs = mean_tprs_gs - std_gs\n",
+    "tprs_upper_gs_svm = np.minimum(mean_tprs_gs_svm + std_gs_svm, 1)\n",
+    "tprs_lower_gs_svm = mean_tprs_gs_svm - std_gs_svm\n",
     "\n",
-    "tprs_upper_deseq = np.minimum(mean_deseq + std_deseq, 1)\n",
-    "tprs_lower_deseq = mean_deseq - std_deseq\n",
+    "tprs_upper_deseq_svm = np.minimum(mean_seq_svm + std_seq_svm, 1)\n",
+    "tprs_lower_deseq_svm = mean_seq_svm - std_seq_svm\n",
     "\n",
-    "tprs_upper_rand = np.minimum(mean_rand + std_rand, 1)\n",
-    "tprs_lower_rand = mean_rand - std_rand"
+    "tprs_upper_rand_svm = np.minimum(mean_rand_svm + std_rand_svm, 1)\n",
+    "tprs_lower_rand_svm = mean_rand_svm - std_rand_svm"
    ]
   },
   {
@@ -2167,7 +2167,44 @@
    "id": "454fce0a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Combine into single plot\n",
+    "fig =plt.figure(figsize=(8,7))\n",
+    "\n",
+    "# Plot Gene Sig\n",
+    "test_label='Test - Gene Sig (AUC= '+str(round(test_auc_gs,2))+')'\n",
+    "plt.plot(fpr_gs, tpr_gs,'b', label=test_label,linewidth=2.5)\n",
+    "train_label='Train - Gene Sig (AUC= '+str(round(sum(aucs_gene_sig)/4,2))+')'\n",
+    "plt.plot(base_fpr, mean_tprs_gs, '--b',label=train_label,linewidth=1)\n",
+    "#plt.fill_between(base_fpr, tprs_lower_gs, tprs_upper_gs, color='grey', alpha=0.3,label='STD 1')\n",
+    "\n",
+    "\n",
+    "# Plot DESEQ\n",
+    "test_label='Test - DESeq2 (AUC= '+str(round(test_auc_deseq,2))+')'\n",
+    "plt.plot(fpr_deseq, tpr_deseq,'r', label=test_label,linewidth=2.5)\n",
+    "train_label='Train - DESeq2 (AUC= '+str(round(sum(aucs_deseq)/4,2))+')'\n",
+    "plt.plot(base_fpr, mean_deseq, '--r',label=train_label,linewidth=1)\n",
+    "#plt.fill_between(base_fpr, tprs_lower_deseq, tprs_upper_deseq, color='grey', alpha=0.3,label='STD 1')\n",
+    "\n",
+    "# Plot Random\n",
+    "test_label='Test - Random Genes (AUC= '+str(round(test_auc_rand,2))+')'\n",
+    "plt.plot(fpr_rand, tpr_rand,'g', label=test_label,linewidth=2.5)\n",
+    "train_label='Train - Random Genes (AUC= '+str(round(sum(aucs_rand)/4,2))+')'\n",
+    "plt.plot(base_fpr, mean_rand, '--g',label=train_label,linewidth=1)\n",
+    "#plt.fill_between(base_fpr, tprs_lower_rand, tprs_upper_rand, color='grey', alpha=0.3,label='STD 1')\n",
+    "\n",
+    "\n",
+    "# Labels and Plot settings\n",
+    "plt.plot([0, 1], [0, 1],'-.k',label='Random Guess',linewidth=1.75)\n",
+    "plt.ylabel('True Positive Rate',fontsize=18)\n",
+    "plt.xlabel('False Positive Rate',fontsize=18)\n",
+    "plt.title('Deep Learning Models ROC Curves',fontsize=20)\n",
+    "plt.legend(title='Legend', bbox_to_anchor=(1, 1), loc='upper left',fontsize=14)\n",
+    "plt.rcParams['legend.title_fontsize'] = 'large'\n",
+    "plt.xticks(fontsize=14)\n",
+    "plt.yticks(fontsize=14)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
